--- a/index.html
+++ b/index.html
@@ -100,53 +100,24 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p> <!--nhớ thay chữ-->
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Linh Ếch</p>
+				<p>Hôm nay là..</p> <!--nhớ thay chữ-->
+				<p>Ngày đẹp như những ngày khác</p>
+				<p>Tuy nhiên</p>
+				<p>Bạn có biết không..?</p>
+				<p>Hôm nay thật đặc biệt</p>
+				<p>Rất đặc biệt với bạn</p>
+				<p>Tôi đã làm tất cả thứ này...</p>
+				<p>Như một món quà sinh nhật cho bạn</p>
+				<p>Cảm ơn bạn đã lắng nghe</p>
+				<p>Tôi chúc bạn tất cả những điều tốt đẹp nhất</p>
+				<p>Chúc cuộc sống của bạn được an nhàn</p>
+				<p>Chúc mọi điều ước của bạn thành hiện thực</p>
+				<p>Nhớ</p>
+				<p>Ước mơ của bạn</p>
+				<p>Chúng tôi luôn ủng hộ bạn</p>
+				<p>Cuối ...</p>
+				<p>Tôi muốn chúc bạn thêm lần nữa</p>
+				<p>a very happy birthdayLinh Ếch</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
