--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">L</h2>
+    	<h2 style="color:#F2B300;"></h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">i</h2>
+    	<h2 style="color:#0719D4;">L</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">n</h2>
+    	<h2 style="color:#D14D39;">i</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">h</h2>
+    	<h2 style="color:#8FAD00;">n</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">Ế</h2>
+    	<h2 style="color:#8377E4;">h</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">c</h2>
+    	<h2 style="color:#99C96A;"></h2>
     </div>
     <div class="balloons text-center" id="b7">
     	<h2 style="color:#20CFB4;">h</h2>
